switched to 1.2.0-beta2